ajouter boutons "enregistrersous" et "imprimer"

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-  <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>LISTE RECHERCHE EMPLOI</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark d-flex justify-content-center align-items-center" style="height: 374px;">
@@ -29,8 +28,11 @@
       </div>
     </div>
   </nav>
-  
-  <h1>Liste des candidatures</h1>
+  <div id="TEXTH1">
+  <button class="btn btn-success mt-0 sauvegarder" onclick="enregistrerSous()">enregistrer sous</button>
+    <h1>LISTE RECHERCHE EMPLOI</h1>
+    <button class="btn btn-primary mt-0 imprimer" onclick="imprimer()">enregistrer sous</button>
+  </div>
   <div class="table-responsive">
   
     <table class="tableau" id="tableau">
