add fonction trie

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <th><button class="btn btn-danger mt-0" onclick="supprimerSelection()">Supprimer</button></th>
         <th>Nom du poste</th>
         <th>Adresse entreprise</th>
-        <th>Candidature envoyée</th>
+        <th id="candidatureEnvoyeeHeader">Candidature envoyée</th>
       </tr>
       <!-- Les autres lignes de données initiales ici -->
     </table>
