add impression page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark d-flex justify-content-center align-items-center"
+  <nav class="navbar navbar-expand-sm navbar-dark bg-primary d-flex justify-content-center align-items-center"
     style="height: 374px;">
     <div class="boxliens">
       <div class="identite">
@@ -39,7 +39,7 @@
   <div id="TEXTH1">
     <button class="btn btn-success mt-0 sauvegarder" onclick="enregistrerSous()">enregistrer sous</button>
     <h1>LISTE RECHERCHE EMPLOI</h1>
-    <button class="btn btn-primary mt-0  imprimer " onclick="imprimerFichier()">imprimer sous</button>
+    <button class="btn btn-primary mt-0  imprimer " onclick="imprimerFichier()">imprimer</button>
   </div>
   <div class="table-responsive">
 
