aligne button column

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             required>
           <input type="text" class="form-control mb-3" id="candidatureEnvoyeeInput" placeholder="Candidature envoyée"
             required>
-          <input type="submit" class="btn btn-primary mt-0 mb-5" value="Valider">
+          <input type="submit" class="submit btn btn-primary mt-0 mb-5" value="Valider">
         </form>
       </div>
     </div>
